mods to searchHit.jspf

--- a/src/main/resources/jnt_searchResults/html/searchHit.jspf
+++ b/src/main/resources/jnt_searchResults/html/searchHit.jspf
@@ -1,9 +1,20 @@
 <div class="inner-results">
+
+  <!--
     <h3><a href="${hit.link}">${fn:escapeXml(functions:abbreviate(hit.title, 100,120,'...'))}</a></h3>
     <ul class="list-inline up-ul">
         <li>${hit.link}</li>
         ‎
     </ul>
+  -->
+
+    <h4><a href="${hit.link}">${fn:escapeXml(hit.title)}</a></h4>
+  <!--
+    <ul class="list-inline up-ul">
+        <li>${hit.link}</li>
+        ‎
+    </ul>
+  -->
     <p>${hit.excerpt}</p>
     <ul class="list-inline down-ul">
         <li>${hit.contentType}</li>
